--- a/src/TatBlog.WebApp/appsettings.json
+++ b/src/TatBlog.WebApp/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost,1433; Initial Catalog=TatBlog; User ID=SA; Password=Password123; TrustServerCertificate=true; Trusted_Connection=false; MultipleActiveResultSets=true"
+  },
+  "MailSettings": {
+    "Mail": "2011379@dlu.edu.vn",
+    "DisplayName": "hauxun",
+    "Password": "",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
