--- a/src/TatBlog.WebApp/appsettings.json
+++ b/src/TatBlog.WebApp/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost,1433; Initial Catalog=TatBlog; User ID=SA; Password=Password123; TrustServerCertificate=true; Trusted_Connection=false; MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=WIN-PDD10056K7R\\SQLEXPRESS; Initial Catalog=TatBlog; TrustServerCertificate=true; Trusted_Connection=true; MultipleActiveResultSets=true"
   },
   "MailSettings": {
     "Mail": "2011379@dlu.edu.vn",
