--- a/src/TatBlog.Core/TatBlog.Core.csproj
+++ b/src/TatBlog.Core/TatBlog.Core.csproj
@@ -5,4 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="Constants\" />
+  </ItemGroup>
 </Project>
