--- a/src/TatBlog.Services/TatBlog.Services.csproj
+++ b/src/TatBlog.Services/TatBlog.Services.csproj
@@ -8,6 +8,9 @@
     <PackageReference Include="MimeKit" Version="3.6.0" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.25" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Timing\" />
+  </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <LangVersion>11.0</LangVersion>
