--- a/src/TatBlog.WebApi/appsettings.json
+++ b/src/TatBlog.WebApi/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=WIN-PDD10056K7R\\SQLEXPRESS; Initial Catalog=TatBlog; TrustServerCertificate=true; Trusted_Connection=true; MultipleActiveResultSets=true"
+  },
+  "MailSettings": {
+    "Mail": "2011379@dlu.edu.vn",
+    "DisplayName": "hauxun",
+    "Password": "",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
